--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,16 @@
+.title{
+    font-size: 90px;
+    color: rgba(137, 43, 226, 0.225);
+}
+input,span,.Li{
+    margin-left: 33%;
+    outline: none;
+    position: relative;
+}
+input,.Li{color: rgba(128, 128, 128, 0.878);}
 
-/* 
+span{margin-top: -24px; font-size: 14px; color: rgb(175, 163, 163);}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+button{float: right;font-size: 10px; color: rgba(128, 128, 128, 0.878);}
 
-*/
+
